# qilbee-mycelial-network

./: .env.example  .gitignore  ANALISE_PROFISSIONAL_QMN.md  BANKING_PROJECT_100_AGENTS_REPORT.md  BUGFIX_SUMMARY.md  BUG_REPORT_METADATA_JSON_PARSING.md  CLAUDE.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY_100_AGENTS.md  GIT_CHECKLIST.md  JSONB_AUDIT_REPORT.md  MONGODB_SETUP_COMPLETE.md  Makefile  PROJECT_STATUS.md  QMN_ARGOCD_APPS_PLAN.md  README.md  docker-compose.yml  export_all.sh  export_to_pdf.sh  export_to_pdf_simple.sh  export_to_word.sh  pytest.ini
.github/workflows/: identity-development.yml  identity-production.yml  keys-development.yml  keys-production.yml  memory-development.yml  memory-production.yml  reinforcement-development.yml  reinforcement-production.yml  router-development.yml  router-production.yml
docs/: API.md  CHAT_WEBSOCKET_INTEGRATION.md  CLAUDE.md  COMMAND_CENTER_INTEGRATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_TEST_RESULTS.md  DRUG_RESEARCH_KNOW_HOW_SHARING.md  ENTERPRISE_50_WORKERS_KNOW_HOW_SHARING.md  EXPORT_README.md  EXPORT_SUMMARY.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  INDEX.md  INTEGRATION_GUIDES_INDEX.md  QMN_API_REFERENCE.md  RESEARCH_PAPER.md  SYNTHETIC_WORKER_INDEX.md  SYNTHETIC_WORKER_INTEGRATION.md  SYNTHETIC_WORKER_MYCELIAL_INTEGRATION.md  SYNTHETIC_WORKER_OVERVIEW.md  SYNTHETIC_WORKER_QUICK_REFERENCE.md  TEST_RESULTS.md  admin-bootstrap.md
examples/: quickstart.py
infra/mongo/: init.js
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/prometheus/: alerts.yml  prometheus.yml
scripts/: create_api_key.py
sdk/: CHANGELOG.md  LICENSE  PYPI_PUBLISH_INSTRUCTIONS.md  README.md  pyproject.toml  setup.py
sdk/qilbee_mycelial_network/: __init__.py  auth.py  client.py  models.py
services/shared/: __init__.py  auth.py  database.py  logging.py  metrics.py  models.py  rate_limiter.py  routing.py  security.py  startup.py
tests/: __init__.py  conftest.py
tests/e2e/: test_50_workers_enterprise.py  test_5_agent_collaboration.py  test_agent_tool_loop.py  (+3 more)
todo/: comprehensive_improvement.md
(+39 files in other folders)
